tests/checker/diagnostics/0253_fun_self_application_02.ml.infer.expected
File "0253_fun_self_application_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0253_fun_self_application_02 is not a valid module name.

File "0253_fun_self_application_02.ml", line 1, characters 19-20:
1 | let bad_beta x = x x
                       ^
Error: The value x has type 'a -> 'b but an expression was expected of type
         'a
       The type variable 'a occurs inside 'a -> 'b
